@@ -31,12 +31,14 @@
  *
  * Original Author:  Daniel Bridenbecker, Solution Engineering, Inc.;
  * Contributor(s):   David Gilbert (for Object Refinery Limited);
+ *                   Martin Hoeller;
  *
  * Changes
  * -------
  * 19-Jan-2004 : Version 1, contributed by DB with minor changes by DG (DG);
  * ------------- JFREECHART 1.0.x ---------------------------------------------
  * 02-Feb-2007 : Removed author tags all over JFreeChart sources (DG);
+ * 10-Oct-2011 : bug #3165708: localization (MH);
  *
  */
 
@@ -143,19 +145,25 @@ public class PolarChartPanel extends ChartPanel {
                                          boolean zoom) {
 
        JPopupMenu result = super.createPopupMenu(properties, save, print, zoom);
-       int zoomInIndex  = getPopupMenuItem(result, "Zoom In");
-       int zoomOutIndex = getPopupMenuItem(result, "Zoom Out");
-       int autoIndex     = getPopupMenuItem(result, "Auto Range");
+       int zoomInIndex = getPopupMenuItem(result,
+               localizationResources.getString("Zoom_In"));
+       int zoomOutIndex = getPopupMenuItem(result,
+               localizationResources.getString("Zoom_Out"));
+       int autoIndex = getPopupMenuItem(result,
+               localizationResources.getString("Auto_Range"));
        if (zoom) {
-           JMenuItem zoomIn = new JMenuItem("Zoom In");
+           JMenuItem zoomIn = new JMenuItem(
+                   localizationResources.getString("Zoom_In"));
            zoomIn.setActionCommand(POLAR_ZOOM_IN_ACTION_COMMAND);
            zoomIn.addActionListener(this);
 
-           JMenuItem zoomOut = new JMenuItem("Zoom Out");
+           JMenuItem zoomOut = new JMenuItem(
+                   localizationResources.getString("Zoom_Out"));
            zoomOut.setActionCommand(POLAR_ZOOM_OUT_ACTION_COMMAND);
            zoomOut.addActionListener(this);
 
-           JMenuItem auto = new JMenuItem("Auto Range");
+           JMenuItem auto = new JMenuItem(
+                   localizationResources.getString("Auto_Range"));
            auto.setActionCommand(POLAR_AUTO_RANGE_ACTION_COMMAND);
            auto.addActionListener(this);
 
